<resources>
    <string name="app_name">task05fragments</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_button_edit">Edit</string>
    <string name="text_name_edit">Name</string>
    <string name="text_surname_edit">Surname</string>
    <string name="text_number_edit">Phone number</string>
    <string name="button_save_text">SAVE</string>
    <string name="button_cancel_text">CANCEL</string>
    <string name="item_add_text">Add</string>
</resources>